-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.4.0 FF
-
None
-
h
-
1daaf613dc (qt/qtbase/dev) 1daaf613dc (qt/tqtc-qtbase/dev) 0816fb999d (qt/qtbase/6.2) 0816fb999d (qt/tqtc-qtbase/6.2) 2ba00de3d5 (qt/qtbase/6.3) 2ba00de3d5 (qt/tqtc-qtbase/6.3)
agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:48: agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/install/lib/QtCore.framework/Headers/QFuture:1: agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture.h:49: agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture_impl.h:369:26: error: implicit instantiation of undefined template 'QPromise<void>' agent:2022/01/23 22:43:00 build.go:394: QPromise<ResultType> promise; agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture.h:364:16: note: in instantiation of template class 'QtPrivate::Continuation<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:12), void, void>' requested here agent:2022/01/23 22:43:00 build.go:394: QtPrivate::Continuation<std::decay_t<Function>, ResultType<Function>, T>::create( agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture.h:355:12: note: in instantiation of function template specialization 'QFuture<void>::then<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:12)>' requested here agent:2022/01/23 22:43:00 build.go:394: return then(QtFuture::Launch::Sync, std::forward<Function>(function)); agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:7: note: in instantiation of function template specialization 'QFuture<void>::then<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:12)>' requested here agent:2022/01/23 22:43:00 build.go:394: f.then([resultType=resultTypeOfQFuture(result.typeName()), f, continuation=safeContinuation] agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:1151:17: note: in instantiation of function template specialization '(anonymous namespace)::attachContinuationToFutureInVariant<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:1136:33)>' requested here agent:2022/01/23 22:43:00 build.go:394: attachContinuationToFutureInVariant(result, publisherExists.get(), sendResponse); agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture_impl.h:65:7: note: template is declared here agent:2022/01/23 22:43:00 build.go:394: class QPromise; agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:48: agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/install/lib/QtCore.framework/Headers/QFuture:1: agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture.h:364:77: error: incomplete definition of type 'QtPrivate::Continuation<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:12), void, void>' agent:2022/01/23 22:43:00 build.go:394: QtPrivate::Continuation<std::decay_t<Function>, ResultType<Function>, T>::create( agent:2022/01/23 22:43:00 build.go:394: ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture.h:355:12: note: in instantiation of function template specialization 'QFuture<void>::then<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:12)>' requested here agent:2022/01/23 22:43:00 build.go:394: return then(QtFuture::Launch::Sync, std::forward<Function>(function)); agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:7: note: in instantiation of function template specialization 'QFuture<void>::then<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:215:12)>' requested here agent:2022/01/23 22:43:00 build.go:394: f.then([resultType=resultTypeOfQFuture(result.typeName()), f, continuation=safeContinuation] agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:1151:17: note: in instantiation of function template specialization '(anonymous namespace)::attachContinuationToFutureInVariant<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:1136:33)>' requested here agent:2022/01/23 22:43:00 build.go:394: attachContinuationToFutureInVariant(result, publisherExists.get(), sendResponse); agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:48: agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/install/lib/QtCore.framework/Headers/QFuture:1: agent:2022/01/23 22:43:00 build.go:394: In file included from /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture.h:49: agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture_impl.h:828:48: error: no viable constructor or deduction guide for deduction of template arguments of 'QPromise' agent:2022/01/23 22:43:00 build.go:394: auto canceledContinuation = [promise = QPromise(fi), handler = std::forward<F>(handler)]( agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfuture.h:419:60: note: in instantiation of function template specialization 'QtPrivate::CanceledHandler<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:249:19), void>::create<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:249:19)>' requested here agent:2022/01/23 22:43:00 build.go:394: QtPrivate::CanceledHandler<std::decay_t<Function>, T>::create(std::forward<Function>(handler), agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:249:8: note: in instantiation of function template specialization 'QFuture<void>::onCanceled<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:249:19), void>' requested here agent:2022/01/23 22:43:00 build.go:394: }).onCanceled([continuation=safeContinuation] { agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:1151:17: note: in instantiation of function template specialization '(anonymous namespace)::attachContinuationToFutureInVariant<(lambda at /Users/qt/work/qt/qtwebchannel/src/webchannel/qmetaobjectpublisher.cpp:1136:33)>' requested here agent:2022/01/23 22:43:00 build.go:394: attachContinuationToFutureInVariant(result, publisherExists.get(), sendResponse); agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfutureinterface.h:216:18: note: candidate template ignored: could not match 'QPromise' against 'QFutureInterface' agent:2022/01/23 22:43:00 build.go:394: friend class QPromise; agent:2022/01/23 22:43:00 build.go:394: ^ agent:2022/01/23 22:43:00 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qfutureinterface.h:216:18: note: candidate function template not viable: requires 0 arguments, but 1 was provided agent:2022/01/23 22:43:00 build.go:394: 3 errors generated.
Details: https://testresults.qt.io/coin/integration/qt/qtwebchannel/tasks/1642979208
Tested changes (refs/builds/qtci/dev/1642977747):
https://codereview.qt-project.org/c/qt/qtwebchannel/+/391613/2 Update dependencies on 'dev' in qt/qtwebchannel