QFuture: add a missing include for qpromise.h

QPromise is now used in qfuture_impl.h, so we need to include it. Remove
qfuture.h include from qpromise.h, to avoid circular dependency.

As a drive-by, simplify a type-trait: is_convertible_v<T, S> is true
whenever is_same_v<T, S> is, so we don't need to instantiate both.

Fixes: QTBUG-100144
Change-Id: Ic6df43d96d9d168cc44c2949e41c5e490f4c50ce
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 1daaf613dc56c5ffedefe7ca6938ae5b191f9411)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>