src/corelib/thread/qfuture_impl.h
@@ -51,6 +51,7 @@
 #include <QtCore/qthreadpool.h>
 #include <QtCore/qexception.h>
 #include <QtCore/qpointer.h>
+#include <QtCore/qpromise.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -69,10 +70,6 @@ enum class Launch { Sync, Async, Inherit };
 }
 
 namespace QtPrivate {
-
-template<class T, class U>
-using EnableIfSameOrConvertible = std::enable_if_t<std::is_same_v<T, U>
-                                                   || std::is_convertible_v<T, U>>;
 
 template<class T>
 using EnableForVoid = std::enable_if_t<std::is_same_v<T, void>>;
